fix wrapping of buttons

--- a/examples/example.css
+++ b/examples/example.css
@@ -5,3 +5,8 @@
 .left-menu {
     width: 10rem;
 }
+
+.no-wrap div {
+    display: flex;
+    flex-direction: row;
+}
